隨便弄兩張寫了個 P 的 Icon 來試試，manifest 加入 contentscript 內容是跳出小視窗，加上 manifest 的 matches 所以只會在 P網跳出來

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Pixiv Downloader",
-  "version": "0.1",
   "description": "This extension help you download image from pixiv.",
+  "version": "0.1",
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -14,6 +14,13 @@
     },
     "default_title": "Pixiv Downloader"
   },
+
+  "content_scripts": [
+    {
+      "matches": ["http://www.pixiv.net/*"],
+      "js": ["contentscript.js"]
+    }
+  ],
 
   "permissions": [],
 
