--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,8 @@
     "default_title": "Pixiv Downloader"
   },
 
+  "options_page": "options.html",
+
   "content_scripts": [
     {
       "matches": ["http://www.pixiv.net/*"],
