--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
   "content_scripts": [
     {
       "matches": ["http://www.pixiv.net/*"],
-      "js": ["jquery-2.2.0.min.js", "contentscript.js"]
+      "js": ["jquery-2.2.0.min.js", "functions.js", "contentscript.js"]
     }
   ],
 
