--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
   "content_scripts": [
     {
       "matches": ["http://www.pixiv.net/*"],
-      "js": ["jquery-2.2.0.min.js", "functions.js", "contentscript.js"]
+      "js": ["jquery-2.2.0.min.js", "functions.js", "contentscript.js"],
+      "all_frames": true,
+      "run_at": "document_end"
     }
   ],
 
