為了使用 chrome.downloads 加入 background page download.js

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
 
   "options_page": "options.html",
 
+  "background": {
+    "persistent": false,
+    "scripts": ["download.js"],
+  },
+
   "content_scripts": [
     {
       "matches": ["http://www.pixiv.net/*"],
