刪除多餘的逗號

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "background": {
     "persistent": false,
-    "scripts": ["download.js"],
+    "scripts": ["download.js"]
   },
 
   "content_scripts": [
