加入 Cross-Origin XHR 的權限

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
     }],
 
     "permissions": [
-        "downloads"
+        "downloads",
+        "*://*.pixiv.net/*"
     ],
 
     "manifest_version": 2
