--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,8 @@
 
     "browser_action": {
         "default_icon": {
-            "19": "",
-            "38": ""
+            "19": "image/icon19.png",
+            "38": "image/icon38.png"
         },
         "default_title": "Pixiv Downloader",
         "default_popup": "popup.html"
