--- a/manifest.json
+++ b/manifest.json
@@ -21,8 +21,8 @@
 
     "content_scripts": [{
         "matches": ["http://www.pixiv.net/*"],
-        "js": ["jquery-2.2.0.min.js", "functions.js", "contentscript.js"],
-        "css": ["style.css"],
+        "js": ["jquery-2.2.0.min.js", "content_functions.js", "content_script.js"],
+        "css": ["content_style.css"],
         "all_frames": true,
         "run_at": "document_end"
     }],
