--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Pixiv Downloader",
-  "description": "This extension help you download image from pixiv.",
-  "version": "0.1",
+  "description": "This extension help you download and preview image from pixiv.",
+  "version": "1.0",
 
   "options_page": "options.html",
 
