--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,15 @@
 
   "options_page": "options.html",
 
+  "browser_action": {
+    "default_icon": {
+      "19": "images/icon19.png",
+      "38": "images/icon38.png"
+    },
+    "default_title": "Pixiv Downloader",
+    "default_popup": "popup.html"
+  },
+
   "background": {
     "persistent": false,
     "scripts": ["jquery-2.2.0.min.js", "download.js"]
@@ -19,6 +28,7 @@
   }],
 
   "permissions": [
+    "tabs",
     "downloads",
     "*://*.pixiv.net/*"
   ],
